--- a/erp-manager-web/pom.xml
+++ b/erp-manager-web/pom.xml
@@ -12,6 +12,13 @@
   
   
   <dependencies>
+  
+  		<dependency>
+			<groupId>com.retail</groupId>
+			<artifactId>erp-common</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+  
   		<!-- JSP相关 -->
 		<dependency>
 			<groupId>jstl</groupId>
