--- a/erp-parent/pom.xml
+++ b/erp-parent/pom.xml
@@ -9,6 +9,8 @@
 	<properties>
 		<junit.version>4.12</junit.version>
 		
+		<commons-lang3.version>3.3.2</commons-lang3.version>
+		
 		<jstl.version>1.2</jstl.version>
 		<servlet-api.version>2.5</servlet-api.version>
 		<jsp-api.version>2.0</jsp-api.version>
@@ -26,6 +28,13 @@
 				<scope>test</scope>
 			</dependency>
 			
+			
+			<!-- Apache工具组件 -->
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-lang3</artifactId>
+				<version>${commons-lang3.version}</version>
+			</dependency>
 			
 			<!-- JSP相关 -->
 			<dependency>
