--- a/erp-manager-web/src/main/webapp/WEB-INF/web.xml
+++ b/erp-manager-web/src/main/webapp/WEB-INF/web.xml
@@ -3,10 +3,23 @@
   <display-name>erp-manager-web</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  
+  
+  <!-- springmvc的前端控制器 -->
+	<servlet>
+		<servlet-name>erp-manager-web</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<!-- contextConfigLocation不是必须的， 如果不配置contextConfigLocation， springmvc的配置文件默认在：WEB-INF/servlet的name+"-servlet.xml" -->
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>classpath:spring/springmvc.xml</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>erp-manager-web</servlet-name>
+		<!-- 伪静态化 -->
+		<url-pattern>/</url-pattern>
+	</servlet-mapping>
 </web-app>
