--- a/erp-common/pom.xml
+++ b/erp-common/pom.xml
@@ -12,6 +12,20 @@
   
   <dependencies>
   
+		  <dependency>
+			    <groupId>com.fasterxml.jackson.core</groupId>
+			    <artifactId>jackson-databind</artifactId>
+			 </dependency>
+			 <dependency>
+			    <groupId>com.fasterxml.jackson.core</groupId>
+			    <artifactId>jackson-annotations</artifactId>
+			 </dependency>
+			 <dependency>
+			    <groupId>com.fasterxml.jackson.core</groupId>
+			    <artifactId>jackson-core</artifactId>
+			 </dependency>
+  
+  
   		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
@@ -28,4 +42,5 @@
 			<scope>provided</scope>
 		</dependency>
 	  </dependencies>
+	  
 </project>
