--- a/erp-manager-web/pom.xml
+++ b/erp-manager-web/pom.xml
@@ -20,6 +20,12 @@
 		</dependency>
 		
 		<dependency>
+			<groupId>com.retail</groupId>
+			<artifactId>erp-manager-pojo</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		
+		<dependency>
 		      <groupId>com.fasterxml.jackson.core</groupId>
 		      <artifactId>jackson-core</artifactId>
 		    </dependency>
