--- a/erp-manager-web/src/main/webapp/WEB-INF/web.xml
+++ b/erp-manager-web/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,14 @@
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
   
+  	<!-- 加载spring容器 -->
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>classpath:spring/applicationContext*.xml</param-value>
+	</context-param>
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
   
   <!-- springmvc的前端控制器 -->
 	<servlet>
