--- a/erp-manager-web/pom.xml
+++ b/erp-manager-web/pom.xml
@@ -21,7 +21,7 @@
 		
 		<dependency>
 			<groupId>com.retail</groupId>
-			<artifactId>erp-manager-pojo</artifactId>
+			<artifactId>erp-manager-dao</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		
