--- a/erp-manager-web/src/main/resources/config/db.properties
+++ b/erp-manager-web/src/main/resources/config/db.properties
@@ -1,4 +1,5 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://192.168.14.250:3306/retail_erp?characterEncoding=utf-8
+#jdbc.url=jdbc:mysql://192.168.14.250:3306/retail_erp?characterEncoding=utf-8
+jdbc.url=jdbc:mysql://localhost:3306/retail_erp?characterEncoding=utf-8
 jdbc.username=root
 jdbc.password=123456
