--- a/erp-manager/pom.xml
+++ b/erp-manager/pom.xml
@@ -23,4 +23,19 @@
   	<module>erp-manager-service</module>
   	<module>erp-manager-dao</module>
   </modules>
+  
+  
+    <!-- 配置tomcat插件 -->
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<configuration>
+					<path>/</path>
+					<port>8081</port>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
