--- a/erp-parent/pom.xml
+++ b/erp-parent/pom.xml
@@ -21,6 +21,9 @@
 		<druid.version>1.0.9</druid.version>
 		<mysql.version>5.1.32</mysql.version>
 		<jedis.version>2.9.0</jedis.version>
+		<dubbo.version>2.6.4</dubbo.version>
+		<zookeeper.version>3.4.6</zookeeper.version>
+		<zkclient.version>0.1</zkclient.version>
 	</properties>
 
 	<dependencyManagement>
@@ -154,6 +157,27 @@
 			    <groupId>redis.clients</groupId>
 			    <artifactId>jedis</artifactId>
 			    <version>${jedis.version}</version>
+			</dependency>
+			
+			
+			<!-- https://mvnrepository.com/artifact/com.alibaba/dubbo -->
+			<dependency>
+			    <groupId>com.alibaba</groupId>
+			    <artifactId>dubbo</artifactId>
+			    <version>${dubbo.version}</version>
+			</dependency>
+			
+			<!-- https://mvnrepository.com/artifact/org.apache.zookeeper/zookeeper -->
+			<dependency>
+			    <groupId>org.apache.zookeeper</groupId>
+			    <artifactId>zookeeper</artifactId>
+			    <version>${zookeeper.version}</version>
+			</dependency>
+			
+			<dependency>
+				<groupId>com.github.sgroschupf</groupId>
+				<artifactId>zkclient</artifactId>
+				<version>${zkclient.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
