--- a/erp-manager-web/pom.xml
+++ b/erp-manager-web/pom.xml
@@ -26,6 +26,12 @@
 		</dependency>
 		
 		<dependency>
+			<groupId>com.retail</groupId>
+			<artifactId>erp-manager-interface</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		
+		<dependency>
 		      <groupId>com.fasterxml.jackson.core</groupId>
 		      <artifactId>jackson-core</artifactId>
 		    </dependency>
@@ -80,6 +86,11 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
 		</dependency>
+		
+		<dependency>
+			    <groupId>com.alibaba</groupId>
+			    <artifactId>dubbo</artifactId>
+			</dependency>
   </dependencies>
   
   	<!-- 配置tomcat插件 -->
