--- a/erp-manager/erp-manager-service/pom.xml
+++ b/erp-manager/erp-manager-service/pom.xml
@@ -10,6 +10,22 @@
   
   
   <dependencies>
+  		<dependency>
+  			  <groupId>com.retail</groupId>
+    		  <artifactId>erp-manager-interface</artifactId>
+    		  <version>0.0.1-SNAPSHOT</version>
+  		</dependency>
+  		<dependency>
+  			  <groupId>com.retail</groupId>
+    		  <artifactId>erp-manager-dao</artifactId>
+    		  <version>0.0.1-SNAPSHOT</version>
+  		</dependency>
+  		<dependency>
+  			  <groupId>com.retail</groupId>
+    		  <artifactId>erp-common</artifactId>
+    		  <version>0.0.1-SNAPSHOT</version>
+  		</dependency>
+  		
  		<!-- Spring -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -48,6 +64,27 @@
 			<dependency>
 				<groupId>org.mybatis</groupId>
 				<artifactId>mybatis-spring</artifactId>
+			</dependency>
+			
+			
+			<dependency>
+			    <groupId>com.alibaba</groupId>
+			    <artifactId>dubbo</artifactId>
+			    <exclusions>  
+	                <exclusion>  
+	                    <artifactId>spring</artifactId>  
+	                    <groupId>org.springframework</groupId>  
+	                </exclusion>  
+            	</exclusions> 
+			</dependency>
+			
+			<dependency>
+			    <groupId>org.apache.zookeeper</groupId>
+			    <artifactId>zookeeper</artifactId>
+			</dependency>
+			<dependency>
+				<groupId>com.github.sgroschupf</groupId>
+				<artifactId>zkclient</artifactId>
 			</dependency>
   </dependencies>
 </project>
