--- a/erp-manager/erp-manager-service/pom.xml
+++ b/erp-manager/erp-manager-service/pom.xml
@@ -70,12 +70,16 @@
 			<dependency>
 			    <groupId>com.alibaba</groupId>
 			    <artifactId>dubbo</artifactId>
-			    <exclusions>  
-	                <exclusion>  
-	                    <artifactId>spring</artifactId>  
-	                    <groupId>org.springframework</groupId>  
-	                </exclusion>  
-            	</exclusions> 
+			    	<exclusions>
+					<exclusion>
+						<groupId>org.springframework</groupId>
+						<artifactId>spring</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.jboss.netty</groupId>
+						<artifactId>netty</artifactId>
+					</exclusion>
+				</exclusions>
 			</dependency>
 			
 			<dependency>
