--- a/erp-manager/erp-manager-service/pom.xml
+++ b/erp-manager/erp-manager-service/pom.xml
@@ -10,6 +10,18 @@
   
   
   <dependencies>
+  		 <dependency>
+            <groupId>com.netflix.ribbon</groupId>
+            <artifactId>ribbon</artifactId>
+            <version>2.2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.netflix.ribbon</groupId>
+            <artifactId>ribbon-httpclient</artifactId>
+            <version>2.2.2</version>
+        </dependency>
+  
+  
   		<dependency>
   			  <groupId>com.retail</groupId>
     		  <artifactId>erp-manager-interface</artifactId>
